--- a/conf/conf_bindingnet/config.yaml
+++ b/conf/conf_bindingnet/config.yaml
@@ -3,7 +3,9 @@ defaults:
 
 dataset:
   # these values can be overwritten by the experiments
-  lifters: []
+  lifters:
+  - "atom:0"
+  - "bond:1"
   supercell: false
   neighbor_types: ["max"]  # Subset of ["+1", "-1", "min", "max"]
   connectivity: "self"  # Choice in [self, all_to_all]
