--- a/conf/conf_bindingnet/config.yaml
+++ b/conf/conf_bindingnet/config.yaml
@@ -9,10 +9,41 @@ dataset:
   supercell: false
   neighbor_types: ["max"]  # Subset of ["+1", "-1", "min", "max"]
   connectivity: "self"  # Choice in [self, all_to_all]
+  # BindingNet stuff
+  connect_cross: false
+  r_cut: 5.0
+  mode: "merged"
 
 # task name will make more sense when we introduce the spatial CC
 task_name: BindingNet
 dataset_name: ${hydra:runtime.choices.dataset}
 experiment_name: ${hydra:runtime.choices.experiment}
 
+compile: false
+seed: 42
 
+# checkpointing
+wandb_entity: null
+ckpt_dir: checkpoints
+ckpt_prefix: null
+force_restart: false
+
+model:
+  num_hidden: 128
+  num_layers: 7
+  normalize_invariants: true
+  batch_norm: false
+  lean: false
+  initial_features: ["hetero"]
+  visible_dims: null
+
+training:
+  epochs: 200
+  batch_size: 32
+  weight_decay: 1e-16
+  min_lr: 0.0
+  num_lr_cycles: 3
+  clip_gradients: true
+  clip_amount: 1.0
+  test_interval: 10
+  lr: 5e-4
