add new configs for experiments

--- a/conf/conf_bindingnet/dataset/subset_20p_no_supercell_no_crossconnect_rcut_0.yaml
+++ b/conf/conf_bindingnet/dataset/subset_20p_no_supercell_no_crossconnect_rcut_0.yaml
@@ -1,4 +1,5 @@
-connect_cross: true
+connect_cross: false
 index: "/data2/BindingNetv2/processed/indexes/Index_BindingNetv2_pockets_subset_20p.csv"
 splits_dir: "/data2/BindingNetv2/processed/splits/subset_20p"
+cleanup_postprocess: false
 use_postprocessed: true
