--- a/conf/conf_bindingnet/config.yaml
+++ b/conf/conf_bindingnet/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - dataset: subset_20p
+  - dataset: subset_20p_no_supercell_no_connect_cross_self
   - experiment: 128_dims
 
 dataset:
