--- a/conf/conf_bindingnet/config.yaml
+++ b/conf/conf_bindingnet/config.yaml
@@ -48,6 +48,7 @@ training:
   epochs: 200
   batch_size: 32
   weight_decay: 1e-16
+  scheduler_mode: "cosine_annealing"
   min_lr: 0.0
   num_lr_cycles: 3
   clip_gradients: true
