adapt lifters to use correct number of features

--- a/conf/conf_bindingnet/dataset/debug_no_supercell_crossconnect_rcut_3.yaml
+++ b/conf/conf_bindingnet/dataset/debug_no_supercell_crossconnect_rcut_3.yaml
@@ -4,6 +4,9 @@ use_postprocessed: false
 supercell: false
 connectivity: "self"  # Choice in [self, all_to_all]
 # BindingNet stuff
+lifters:
+  - "atom:0"
+  - "bond_cross:1"  # Use cross-connection aware bond lifter
 connect_cross: true
 r_cut: 3
 merge_graphs: false
