--- a/conf/conf_bindingnet/dataset/subset_20p_no_supercell_crossconnect_rcut_3.yaml
+++ b/conf/conf_bindingnet/dataset/subset_20p_no_supercell_crossconnect_rcut_3.yaml
@@ -9,5 +9,5 @@ lifters:
   - "bond_cross:1"  # Use cross-connection aware bond lifter
 connect_cross: true
 r_cut: 3
-merge_graphs: false
-force_reload: false
+merge_graphs: true
+force_reload: true
