--- a/conf/conf_bindingnet/experiment/lronplateau_mse.yaml
+++ b/conf/conf_bindingnet/experiment/lronplateau_mse.yaml
@@ -5,11 +5,10 @@ model:
 training:
   batch_size: 64
   weight_decay: 1e-16
-  scheduler_mode: 'cosine_annealing'
+  scheduler_mode: "ReduceLROnPlateau"
   min_lr: 0.0
   num_lr_cycles: 3
   clip_gradients: true
   clip_amount: 1.0
-  test_interval: 10
   lr: 5e-4
-  crit: 'L1Loss'
+  crit: 'MSE'
