--- a/conf/conf_bindingnet/experiment/standard_128.yaml
+++ b/conf/conf_bindingnet/experiment/standard_128.yaml
@@ -3,13 +3,14 @@ model:
   num_hidden: 128
 
 training:
-  batch_size: 64
-  weight_decay: 1e-16
+  batch_size: 256
+  weight_decay: 1e-4
   scheduler_mode: 'cosine_annealing'
-  min_lr: 0.0
-  num_lr_cycles: 3
+  optimizer: 'AdamW'
+  min_lr: 1e-5
+  num_lr_cycles: 2
   clip_gradients: true
   clip_amount: 1.0
-  test_interval: 10
   lr: 5e-4
   crit: 'L1Loss'
+  continue_from_weights: false
